# equi2cube

./: .gitignore  README-cli.md  README.md  pyproject.toml
.github/workflows/: release.yml
equi2cube/: app.py  equi2cube.py
src/: RoomA_frame_001110.jpg:Zone.Identifier
