[tool.poetry]
name = "equi2cube"
version = "0.2.5"
description = "A tool to convert equirectangular images to cubemap images"
authors = ["Ricklon <rick.rickanderson@gmail.com>"]
readme = "README.md"
homepage = "https://github.com/ricklon/equi2cube"
repository = "https://github.com/ricklon/equi2cube"
license = "MIT"
packages = [{include = "equi2cube"}]

[tool.poetry.dependencies]
python = "^3.11"
streamlit = "^1.37.1"
opencv-python = "^4.10.0.84"
numpy = "^2.1.0"
pillow = "^10.4.0"

[tool.poetry.scripts]
equi2cube = "equi2cube.equi2cube:cli"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
